2010-10-30 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.99.2-2 :
	- db5.1/poppler rebuild
	- add a missing link for the start menu entries, https://bugs.archlinux.org/task/21358
	- update source tree
	- disable mono for now, requires major upstream code rework

2010-10-09 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.99.2-1 :
	- new upstream beta release
	- reenable LDFLAGS
	- termporarely build without stlport also for i686 to workaround 
	  build issues with cppunit
	
2010-09-28 Andreas Radke <andyrtr at archlinux.org>

	* new libreoffice based on go-openffice, see
	- http://www.freedesktop.org/wiki/Software/LibreOffice
	- add imagemagick for art tweaks

2010-09-16 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.99.1-1 :
	- prepare new 3.3 cycle in testing
	- alpha1 release
	- use old style provided splitted sources
	- remove git and rsync from makedeps

2010-09-15 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1.4-2 :
	- disable-gio feature, see
	https://bugs.archlinux.org/task/18461 and
	https://bugzilla.novell.com/show_bug.cgi?id=567846
	http://bugs.gentoo.org/289665
	https://bugs.archlinux.org/task/18133 too?

2010-09-11 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1.4-1 :
	- new upstream stable release
	- bring deps/makedeps/optdeps in sync with 
	  vanilla OOo
	- rework deps for clean builds
	- use system libwpg as optdep

2010-06-06 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1.3-1 :
	- new upstream release = 3.2.1 RC2 = final
	- bring deps/makedeps/optdeps in sync with 
	  vanilla OOo

2010-05-15 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1.1-1 :
	- new upstream release = 3.2.1 RC1
	- enable system-graphite
	- cleanup ArchLinux.patch

2010-04-04 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0.9-2 :
	- rebuild for icu 4.4
	- use internal redland. system one is still too broken

2010-03-26 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0.9-1 :