@@ -2,13 +2,12 @@
 # Maintainer: AndyRTR <andyrtr@archlinux.org>
 
 pkgname=libreoffice
-_LOver=3.2.99.2 # = 3.3-beta2
+_LOver=3.2.99.3 # = 3.3-beta3
 pkgver=${_LOver}
-pkgrel=2
+pkgrel=1
 pkgdesc="a productivity suite that is compatible with other major office suites"
 arch=('i686' 'x86_64')
 _LO_tree="3.3"
-_ootag=ooo330-m7 # m18/m19 = OOo 3.2.1 RC
 license=('LGPL3')
 url="http://www.freedesktop.org/wiki/Software/LibreOffice"
 install=${pkgname}.install
@@ -21,7 +20,7 @@ makedepends=('boost' 'sane' 'perl-archive-zip' 'zip' 'unzip' 'xulrunner' 'unixod
 depends=("curl>=7.20.0" "hunspell>=1.2.8" "python2>=2.7" 'libwpd' 'libxaw' "neon>=0.28.6"
           'pango' 'nspr' 'libjpeg' 'libxrandr' 'libgl' 'dbus-glib' "icu>=4.2.1" 'libxslt'
 	  'redland' 'libgraphite' 'hyphen' 'lpsolve' 'gcc-libs' 'sh'
-	  'hicolor-icon-theme' 'desktop-file-utils' 'gtk2') # keep gtk2 for install script
+	  'hicolor-icon-theme' 'desktop-file-utils' 'shared-mime-info' 'gtk2') # keep gtk2 for install script
 	  #'saxon'
 optdepends=('java-runtime:     adds java support'
              'libcups:          adds printing support'
@@ -43,16 +42,13 @@ optdepends=('java-runtime:     adds java support'
              'mesa:             for the OGLTrans extension'
              'gstreamer0.10-base: + some gstr-plugins to support multimedia content, e.g. in impress')
 #             'mono:             allows UNO automation with Mono'
-
 backup=(usr/lib/ooo-3.3/program/sofficerc)
 provides=('openoffice-base' 'go-openoffice')
 conflicts=('openoffice-base' 'go-openoffice')
 _mirror="http://download.documentfoundation.org/libreoffice/src"
 _additional_source_url="http://hg.services.openoffice.org/binaries"
 source=(${_mirror}/${pkgname}-build-${_LOver}.tar.gz
-#	${_mirror}/libreoffice-\
-	${_mirror}/${pkgname}-\
-{artwork,base,bootstrap,calc,components,extensions,extras,filters,help,impress,l10n,libs-core,libs-extern,libs-extern-sys,libs-gui,postprocess,sdk,testing,ure,writer}-${_LOver}.tar.bz2
+	${_mirror}/${pkgname}-{artwork,base,bootstrap,calc,components,extensions,extras,filters,help,impress,l10n,libs-core,libs-extern,libs-extern-sys,libs-gui,postprocess,sdk,testing,ure,writer}-${_LOver}.tar.bz2
 	ArchLinux.patch
 	${_additional_source_url}/63ddc5116488985e820075e65fbe6aa4-openssl-0.9.8o.tar.gz
 	${_additional_source_url}/09357cc74975b01714e00c5899ea1881-pixman-0.12.0.tar.gz
@@ -83,7 +79,7 @@ source=(${_mirror}/${pkgname}-build-${_LOver}.tar.gz
 	${_additional_source_url}/4ea70ea87b47e92d318d4e7f5b940f47-cairo-1.8.0.tar.gz
 	${_additional_source_url}/599dc4cc65a07ee868cf92a667a913d2-xpdf-3.02.tar.gz
 	${_additional_source_url}/5aba06ede2daa9f2c11892fbd7bc3057-libserializer.zip
-	${_additional_source_url}/b92261a5679276c400555004937af965-nss-3.12.6-with-nspr-4.8.4.tar.gz
+	http://download.go-oo.org/src/71474203939fafbe271e1263e61d083e-nss-3.12.8-with-nspr-4.8.6.tar.gz
 	${_additional_source_url}/67b42915c8432abf0a922438f00860a2-libxml.zip
 	${_additional_source_url}/7740a8ec23878a2f50120e1faa2730f2-libxml2-2.7.6.tar.gz
 	${_additional_source_url}/7376930b0d3f3d77a685d94c4a3acda8-STLport-4.5-0119.tar.gz
@@ -126,7 +122,7 @@ source=(${_mirror}/${pkgname}-build-${_LOver}.tar.gz
 	${_additional_source_url}/831126a1ee5af269923cfab6050769fe-mysql-connector-cpp.zip
 	${_additional_source_url}/067201ea8b126597670b5eff72e1f66c-mythes-1.2.0.tar.gz
 	${_additional_source_url}/cf8a6967f7de535ae257fa411c98eb88-mdds_0.3.0.tar.bz2
-	http://www.numbertext.org/linux/f20f67d1715c7be81688a2ad58d8291d-LinLibertineG-20101004.zip
+	http://www.numbertext.org/linux/c8fc33ad1efb77155f61e0e4ba8d3e9e-LinLibertineG-20101021.zip
 	http://download.go-oo.org/src/47e1edaa44269bc537ae8cabebb0f638-JLanguageTool-1.0.0.tar.bz2
 	http://download.go-oo.org/src/90401bca927835b6fbae4a707ed187c8-nlpsolver-0.9.tar.bz2
 	http://download.go-oo.org/src/debc62758716a169df9f62e6ab2bc634-zlib-1.2.3.tar.gz
@@ -136,7 +132,7 @@ source=(${_mirror}/${pkgname}-build-${_LOver}.tar.gz
 	http://download.go-oo.org/extern/185d60944ea767075d27247c3162b3bc-unowinreg.dll
 	http://download.go-oo.org//DEV300/ooo-cli-prebuilt-3.3.tar.bz2
 	http://download.go-oo.org//SRC680/mdbtools-0.6pre1.tar.gz
-	http://download.go-oo.org//SRC680/extras-3.tar.bz2
+	http://download.go-oo.org//SRC680/extras-3.1.tar.bz2
 	http://download.go-oo.org//SRC680/biblio.tar.bz2
 	http://download.go-oo.org/src//0f63ee487fda8f21fafa767b3c447ac9-ixion-0.2.0.tar.gz
 	http://download.go-oo.org/src//e3738abd0d3ce1870dc1fd1f22bba5b1-icu4c-4_2_1-src.tgz
@@ -144,27 +140,27 @@ source=(${_mirror}/${pkgname}-build-${_LOver}.tar.gz
 #options=('!makeflags')
 noextract=(libreoffice-\
 {artwork,base,bootstrap,calc,components,extensions,extras,filters,help,impress,l10n,libs-core,libs-extern,libs-extern-sys,libs-gui,postprocess,sdk,testing,ure,writer}-${_LOver}.tar.bz2)
-md5sums=('592fdc3d8b6b70fee15a651649cd8e01'
-         '06023a85090474a186e6ce6473c40127'
-         'fd6ba9df4a24940acba3f860bf6a59fa'
-         'fd9c003b86eb42fca0856399dbb41e5e'
-         '09d69784cf1f2fa1dd579f1352255a39'
-         'f2bbc54234ef0e8cc2a9833d8a9794d2'
-         'dcfacc8ee8f9cf507fbe6584e120feb0'
-         '5a3f5a1fa57fc002886ab877145f5d83'
-         '88ce0e284e72a9e7f7c41aa464e26f1f'
-         '954247706070d40150c1f29d926d6bfa'
-         'b732c9854c7667cd17ab5c5217813157'
-         'a1ed0d867eda10b1f8721948d0a9982f'
-         'bd0ba58f97e26413ff33305ded0f68e9'
-         '82090695974145d43f217c1469336583'
-         '36f3d9e5b266ac4c487608110f45dda6'
-         '04275c10b9b2fe64cf92aeb8da74221e'
-         'c6dc3c8beebd362b655e1bfd8118fa3c'
-         '5273c85300724600e557147d4cbf9fae'
-         'f658ee713f18e3c00125d363fc862c85'
-         '15b0c3b5d99335f2a6e034841918e8fe'
-         '31909d2508ae56ff971a871fc7404c87'
+md5sums=('0a7fbe8193f9334b068c4fef9a958fc4'
+         '75c7a8ce88f3ba72246517338912c0d8'
+         'a721cac9741e22efa9b8f9848685b18c'
+         '070bc02f54737e2d837e0f34298702db'
+         '1a9cf9075cd4ef81d894898f69d91224'
+         '4b79db72d5b18a29c54f4a6e3915b332'
+         '5f8fe4669551239f6a8e48a333462949'
+         'eaf9ed72ef2aa8eddbc3c0ab1eff81aa'
+         'fc367831b28c127b52af88e46673ad4a'
+         '3c3f604df53afc485d2718bf228ec8c9'
+         'ce0306299936e0dcb45f3a3793c62b87'
+         '120afae2dadb6adb55a263fd874b97ff'
+         '89be374be52889461fc5a95b510b0a7e'
+         'af28aed3d9f72fce3617841bc516950d'
+         '84b3bac50df52c27bbc2da6ec5e84de4'
+         '8fc5778204613f10ea2474fc96912aa5'
+         '428c7dc8cc5ed9cefe19eb96fb5ac54b'
+         '3917e52d0254421a4767985b6540520c'
+         'e57d74b5fb0da6fdc2d0c92e7f4061c9'
+         '1b6b16e561854a0cadfc4d8ff83c95d8'
+         '916e479975f99283d8108bf37e3407b3'
          'a77cc2fdff90146485e0b1f1398bb0d4'
          '63ddc5116488985e820075e65fbe6aa4'
          '09357cc74975b01714e00c5899ea1881'
@@ -195,7 +191,7 @@ md5sums=('592fdc3d8b6b70fee15a651649cd8e01'
          '4ea70ea87b47e92d318d4e7f5b940f47'
          '599dc4cc65a07ee868cf92a667a913d2'
          '5aba06ede2daa9f2c11892fbd7bc3057'
-         'b92261a5679276c400555004937af965'
+         '71474203939fafbe271e1263e61d083e'
          '67b42915c8432abf0a922438f00860a2'
          '7740a8ec23878a2f50120e1faa2730f2'
          '7376930b0d3f3d77a685d94c4a3acda8'
@@ -238,7 +234,7 @@ md5sums=('592fdc3d8b6b70fee15a651649cd8e01'
          '831126a1ee5af269923cfab6050769fe'
          '067201ea8b126597670b5eff72e1f66c'
          'cf8a6967f7de535ae257fa411c98eb88'
-	 'f20f67d1715c7be81688a2ad58d8291d'
+         'c8fc33ad1efb77155f61e0e4ba8d3e9e'
          '47e1edaa44269bc537ae8cabebb0f638'
          '90401bca927835b6fbae4a707ed187c8'
          'debc62758716a169df9f62e6ab2bc634'
@@ -248,7 +244,7 @@ md5sums=('592fdc3d8b6b70fee15a651649cd8e01'
          '185d60944ea767075d27247c3162b3bc'
          'fc46e64367c3b09a1668fb9ab40c031b'
          '246e8f38b2a1af1bcff60ee0da59300b'
-         '36f323a55ee83e9dc968e1b92569b62a'
+         '1aa219782c41ff6cabef9ecaf147556f'
          '1948e39a68f12bfa0b7eb309c14d940c'
          '0f63ee487fda8f21fafa767b3c447ac9'
          'e3738abd0d3ce1870dc1fd1f22bba5b1'
@@ -288,7 +284,7 @@ build() {
 	fi
 
 	./configure --with-distro=ArchLinux \
-		--with-build-version="${_LOver} ArchLinux build-${pkgrel} (${_ootag})"\
+		--with-build-version="${_LOver} ArchLinux build-${pkgrel}" \
 		--without-git \
 		--with-srcdir=${srcdir} \
 		--with-max-jobs=${MAKEFLAGS/-j/} \
@@ -318,6 +314,14 @@ build() {
 		--enable-presenter-extra-ui\
 		--enable-report-builder\
 		--enable-wiki-publisher \
+		--with-ct2n \
+		--with-hunart \
+		--with-nlpsolver \
+		--with-numbertext \
+		--with-oooblogger \
+		--with-typo \
+		--with-watch-window \
+		--with-diagram \
 		--enable-ogltrans \
 		--without-fonts\
 		--without-afms\
@@ -350,6 +354,12 @@ build() {
 		
 #		--enable-report-builder \	
 #		--with-additional-sections="OOXMLExport"
+
+#		--with-languagetool \
+#		--with-lightproof \
+#		--with-validator \
+#		--with-barcode \
+
 
 	unset MAKEFLAGS
 	./download
