@@ -1,3 +1,14 @@
+2010-11-14 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.2.99.3-1 :
+	- new upstream snapshot, 3.3 beta3 release
+	- add shared-mime-info dependency
+	- enable more extensions
+	- keep languagetool disabled, it won't build
+	- keep lightproof disabled, it won't build
+	- keep validator disabled, it won't build
+	- keep barcode disabled, it won't build
+
 2010-10-30 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.2.99.2-2 :
